test/src/e2e_vm_tests/test_programs/should_pass/trait_coherence/impl_alias_same_package/src/lib.sw
library;

pub struct ExternalType {}

pub type ExternalAlias = ExternalType;

impl ExternalAlias {
    pub fn alias_method(self) {
    }
}
