test/src/e2e_vm_tests/test_programs/should_fail/trait_coherence/impl_alias_external/src/lib.sw
library;

use impl_self_overlap_lib::MyType;

type ExternalAlias = MyType;

impl ExternalAlias {
    fn alias_method(self) {
        
    }
}
